--- a/pipelane-front/src/app/features/prospecting/prospecting-sequences.component.scss
+++ b/pipelane-front/src/app/features/prospecting/prospecting-sequences.component.scss
@@ -1,7 +1,7 @@
 .layout {
   display: grid;
-  grid-template-columns: minmax(280px, 1fr) minmax(360px, 2fr);
-  gap: 24px;
+  grid-template-columns: minmax(280px, 360px) minmax(0, 1fr);
+  gap: clamp(16px, 2vw, 28px);
 }
 
 .card-header {
